# tools

./: .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum  package-lock.json  package.json  tools.go
.github/: dependabot.yml
.github/workflows/: ci.yaml  pypi-license-header.yaml
cmd/license-header/: main.go
cmd/protoc-gen-by-dir/: main.go
cmd/protoc-gen-inspect-code-generator-request/: main.go
cmd/protoc-gen-multi/: README.md  buf.plugin.yaml  go.mod  go.sum  main.go  main_test.go
cmd/protoc-gen-multi/example/: Dockerfile  buf.gen.yaml  buf.plugin.yaml
cmd/protoc-gen-multi/example/proto/example/: example.proto
cmd/protoc-gen-multi/testdata/: Dockerfile  buf.plugin.yaml  request.json
cmd/protoc-gen-strategy-all-to-strategy-directory/: main.go
cmd/update-changelog/: README.md  main.go
npm-packages/license-header/: .npmignore  README.md  command.mjs  constants.mjs  modify.mjs  modify.test.mjs  package.json  util.mjs  util.test.mjs
npm-packages/license-header/testdata/config/golden/: package.json
npm-packages/license-header/testdata/config/incomplete/: package.json
npm-packages/license-header/testdata/config/invalid-type/: package.json
npm-packages/license-header/testdata/files/: .eslintrc.js  a.js  b.js  c.js
npm-packages/protocompile/: README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
npm-packages/protocompile/src/: buf-build.test.ts  buf-build.ts  compile.test.ts  compile.ts  example.test.ts  index.ts
pypi-packages/license-header/: README.md  pyproject.toml
pypi-packages/license-header/src/license_header/: __init__.py  __main__.py  _api.py  _config.py  _files.py  _header.py
pypi-packages/license-header/tests/: test_config.py  test_files.py  test_header.py
